# stc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  example  main
.github/workflows/: ci.yml
examples/: comments.st  empty_program.st  variable_declaration.st
examples/function/: function.st  function_no_args.st  main.cpp
src/: CMakeLists.txt  code_gen_context.hpp  compile.cpp  compile.hpp  compiling.h  lexer.cpp  lexer.h  lexer.hpp  main  main.cpp  parse.cpp  parse.h  parse.hpp  token.cpp  token.h  token.hpp  token_stream.cpp  token_stream.hpp
src/ast/: binary_expr_ast.cpp  binary_expr_ast.hpp  call_expr_ast.cpp  call_expr_ast.hpp  expr_ast.cpp  expr_ast.hpp  function_ast.cpp  function_ast.hpp  logging.h  number_expr_ast.cpp  number_expr_ast.hpp  prototype_ast.cpp  prototype_ast.hpp  variable_expr_ast.cpp  variable_expr_ast.hpp
test/: CMakeLists.txt  codegen_function.cpp  lexer.cpp  parse_function.cpp  parser.cpp  token.cpp
